Revision history for {{$dist->name}}},

{{$NEXT}}

0.10      2020-09-23 03:16:36 -0600
  - Add tmpfile constructor for FFI::C::File (gh#41)

0.09      2020-09-22 14:28:36 -0600
  - Move to PerlFFI org (gh#37)
  - Add FFI::C::File class (gh#38)
  - Add FFI::C::PosixFile class (gh#38)

0.08      2020-05-12 19:20:26 -0400
  - Added enum method to FFI::C (gh#23, gh#36)

0.07      2020-05-11 19:50:38 -0400
  - Added trim_string property to FFI::C::StructDef (gh#35)

0.06      2020-05-09 04:41:32 -0600
  - Bumped Test2::Suite prereq to get float (gh#33)
  - Fixes for Perls with 32bit IV (gh#34)

0.05      2020-05-07 04:58:02 -0600
  - Added set_array_count function to FFI::C::Util (gh#31)

0.04      2020-05-05 09:24:13 -0600
  - non-generated struct/union objects properly support can (gh#28)
  - Added nullable property to FFI::C::Def class (gh#30)

0.03      2020-05-03 15:57:56 -0600
  - Allow creating variable array with array ref initalization (gh#27)
    (that this was missing from the initial release was an oversight)

0.02      2020-05-03 07:57:00 -0600
  - Fixed floating point tests with longdouble and quadmath Perls (gh#24, gh#25)

0.01      2020-05-02 17:15:38 -0600
  - initial version

