@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}},
 
 {{$NEXT}}
+  - Add addressof function to FFI::C::Util (gh#49)
 
 0.10      2020-09-23 03:16:36 -0600
   - Add tmpfile constructor for FFI::C::File (gh#41)
